--- a/styles.css
+++ b/styles.css
@@ -54,21 +54,19 @@ nav ul {
 }
 
 nav ul li {
-    font-family: 'WeatherSunday', Arial, sans-serif; 
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     margin:10px; /* Espaciado entre los enlaces */
     text-align: center;
 }
 
 nav ul li a {
     color: #fff; /* Color del texto */
-    text-decoration: none; /* Elimina el subrayado de los enlaces */
     font-size: 25px; /* Tamaño de fuente */
-    
     transition: color 0.3s ease; /* Transición suave para el color */
 }
 
 nav ul li a:hover {
-    color: #87faa4; /* Color de los enlaces al pasar el ratón por encima */
+    color: #fcf949; /* Color de los enlaces al pasar el ratón por encima */
 }
 
 nav ul.show {
@@ -335,9 +333,14 @@ nav ul.show {
     width: 50%;
     max-width: 500px;
 }
-.descripcion1 h2{
+.descripcion1 h1{
     font-family: 'WeatherSunday', Arial, sans-serif; 
-    font-size: 30px;
+    font-size: 32px;
+    text-align: center;
+}
+.descripcion1 h2{
+    font-family: Arial, Helvetica, sans-serif; 
+    font-size: 20px;
     text-align: center;
 }
 
@@ -432,6 +435,9 @@ nav ul.show {
 #agrupacion2 .descripcion2 {
     width: 900px; /* Ancho fijo */
     max-width: none; /* Sin límite de ancho máximo */
+}
+#agrupacion2 .descripcion2 h1{
+    text-align: center;
 }
 
 /* Párrafo dentro de descripción */
@@ -706,13 +712,14 @@ nav ul.show {
         width: 100%; /* Ancho 100% en pantallas más pequeñas */
         max-width: 100%; /* Sin límite de ancho máximo */
     }
+    #agrupacion2 .descripcion2 h1 {
+        text-align: center;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+        font-size: 30px;
+    }
 
     #agrupacion2 .descripcion2 p {
         font-size: 16px; /* Reducir tamaño del texto para pantallas pequeñas */
-    }
-
-    .titulo2 {
-        font-size: 20px; /* Reducir tamaño de título */
     }
 
     #agrupacion2 .carousel {
